Fix issue #2 : Button group breaks when card title is too long

--- a/src/sass/3-component/_card.sass
+++ b/src/sass/3-component/_card.sass
@@ -38,8 +38,6 @@
 		justify-content: space-between
 		align-items: center
 		margin-bottom: 20px
-		//border-bottom: 1px solid #ddd
-		//padding-bottom: 10px
 		p
 			margin: 0
 		.title
@@ -47,6 +45,8 @@
 		.side
 			margin-bottom: 0
 			padding-left: 0
+		.btn-group
+			flex: 0 0 auto
 
 	.card-footer
 		border-top: 1px solid #ddd
